@@ -38,6 +38,7 @@ Mejorado debug cpu:
 - Mostrar cuando la memoria se ha modificado por la última execución de instrucción en vistas 5 y 6
 - Tecla directa (t) para evaluar expresiones
 - Agregadas variables de usuario VAR0, VAR1, ... VAR9
+- Agregado contador de frames de video
 
 Corregida emulación de Magnum Light Phaser
 Corregida lectura de puerto BFFD en Spectrum +2A/+3
